--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@media screen and (max-width: 699px) {
+  .container {
+  display: grid;
+  grid-template-rows: 200px auto;
+  grid-template-columns: 100%;
+  grid-template-areas: "header" "sidebar" "content" "footer";
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.container {
+  display: grid;
+  grid-template-rows: 200px auto 100px;
+  grid-template-columns: 33% auto;
+  grid-template-areas: 
+  "header header" 
+  "sidebar content" 
+  "footer footer";  }
+
+    .header {
+      grid-area: header;
+    }
+
+    .sidebar {
+      grid-area: sidebar;
+    }
+
+    .footer {
+      grid-area: footer; 
+    }
+      
+  
